[package]
name = "fibe"
version = "0.1.0"
license = "Apache-2.0"
keywords = ["gamedev"]
authors = ["Fibe-rs Hackers"]

[lib]
name = "fibe"

[dependencies]
log = "*"
atom = "*"
deque = "*"
rand = "*"
num_cpus = "*"

[dependencies.pulse]
features = ["callback"]

[dependencies.bran]
git = "https://github.com/slide-rs/bran.git"

[dev-dependencies]
timebomb = "*"